2009-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.tcl: Added option -socketcmd enabling users to override how
	* comm.man: a socket is opened. The envisioned main use is the
	* pkgIndex.tcl: specification of tls::socket to secure the
	* comm.pcx: communications. Version bumped to 4.6. Extended syntax
	* comm.test: definitions for tclchecker, and extended testsuite.

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.pcx: New file. Syntax definitions for the public commands
	  of the comm package.

2008-05-16  Andreas Kupries  <andreask@activestate.com>

	* comm_wire.man: Fixed the sectref argument order issues.

2008-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm_wire.man: Updated to changes in doctools (sub)section
	  reference handling.

2008-03-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm_wire.man: Changed 'require' information to show that this
	  manpage belongs to the documentation for the package 'comm'.

2008-02-29  Andreas Kupries  <andreask@activestate.com>

	* comm.tcl: Accepted Hemang's <hemanglavana@users.sourceforge.net>
	* comm.man: patch for the [SF Tcllib Bug 1861565] he
	* comm.test: reported. This changes the handling of 'port already
	* pkgIndex.tcl: in use' errors to provide a clear
	  message. Testsuite was updated. Version bumped to 4.5.7.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-21  Andreas Kupries  <andreask@activestate.com>

	* comm_wire.man: Fixed description of messages in the basic
	  message layer, and of EOL, per [SF Tcllib Bug 1739372] (by Lars